2005-04-10 Borut Razem <borut.razem AT siol.net>

	* src/pic/gen.c (genInline),
	  src/pic/pcode.c (newpCodeAsmDir), (pCode2str),
	  (genericPrint), (unlinkpCodeFromBranch), (compareLabel),
	  (findNextInstruction), (findPrevInstruction),
	  (findInstructionUsingLabel),
	  src/pic/pcode.h: fixed bug #1164907 - Labels not being recognized
	* src/pic/pcode.c (findLabel): added missing '\n'
	* src/src.dsp: added SDCCdwarf2.c to the project

2005-04-09 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added include/hc08/* h to NSIS setup

2005-04-08 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c: added helpers defmapInsertAfter (insert a new item
	  into the chain after a given one) and mergeDefmapSymbols (combine
	  defmap entries for each symbol per pcode)
	* (createDefmap): have defmap entries merged in the end
	* (defmapReplaceSymRef): split defmap entries covering two accesses to
	  a symbol before replacing one access type's symbol, merge symbols in
	  the end (replacement symbol might already have an entry)
	* (assignValnums): keep reference to written WREG intact

2005-04-08 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (struct defmap_s): named anonymous union (for
	  Alpha)

2005-04-08 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/pcode.c (pic16_get_op2): enlarged size of array b to 128
	bytes

2005-04-07 Raphael Neider <rneider AT web.de>

	* device/include/pic16/usart.h: added compatibility defines for
	  devices with more than one USART
	* device/include/pic16/pic18f[68][567]20.h: activated above defines

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/Makefile.in: updated for port specific include

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/ports/mcs51/spec.mk: added mcs51 include

2005-04-07 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/8051.h,
	* device/include/8052.h,
	* device/include/at89S8252.h,